# gpu-practice

./: CMakeLists.txt
lab01/: CMakeLists.txt
lab01/cl/: arraySum.cl  hello.cl
lab01/src/: main.cpp
lab02/: CMakeLists.txt
lab02/cl/: blas.cl
lab02/include/: array_utils.h  blas.h  kernel_utils.h
lab02/src/: blas.cpp  kernel_utils.cpp  main.cpp
lab03/: CMakeLists.txt
lab03/cl/: matrix_multiply.cl  matrix_multiply_block.cl  matrix_multiply_image.cl
lab03/include/: array_utils.h  matrix_multiply.h
lab03/src/: main.cpp  matrix_multiply.cpp
lab04/: CMakeLists.txt
lab04/cl/: jacobi_method.cl
lab04/include/: array_utils.h  jacobi_method.h
lab04/src/: jacobi_method.cpp  main.cpp
